css change to fix contact overlap hiding give  us a shout

--- a/css/theme.css
+++ b/css/theme.css
@@ -196,7 +196,7 @@ section.about {
 
 section.contact {
     height:100vh;
-    margin-bottom:50px;
+    margin-bottom:200px;
 }
 
 @media (max-width: 767px) {
